--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "nodemon index.js"
+    "build": "npm i && nodemon index.js"
   },
   "author": "",
   "license": "ISC",
